# nyaya

./: .gitignore  .mcp.json  2025-10-21-command-messageinit-is-analyzing-your-codebase.txt  CLASS_DISTRIBUTION.md  CLAUDE.md  EXAMPLE.md  FINAL_INTEGRATION_REPORT.txt  INTEGRATION_CHECKLIST.md  INTEGRATION_GUIDE.md  INTEGRATION_SUMMARY.md  OCT19.md  PINECONE_MIGRATION.md  QUICK_START_GUIDE.md  README.md  ROLE_CLASSIFIER_TRAINING.ipynb  START_DEVELOPMENT.md  SYSTEM_WORKFLOW_EXPLANATION.md  TRAIN_INLEGALBERT_CLASSIFIER copy.ipynb  TRAIN_INLEGALBERT_CLASSIFIER.ipynb  check_setup.sh  main.py  main.tex  pyproject.toml  start.sh
.github/: copilot-instructions.md
.sl/: reponame  undo.dirstate
.sl/blackbox/v1/0/: index2-event  index2-session_id  log  meta  rlock
.sl/store/: lock.data
.sl/store/allheads/: meta  rlock
.sl/store/git/: config
.sl/store/hgcommits/v1/: meta  rlock
.sl/store/metalog/blobs/: index2-id  log  meta  rlock
.sl/store/metalog/roots/: log  meta  rlock
.sl/store/segments/v1/: multimeta
.sl/store/segments/v1/iddag/: fold-cover  meta  rlock
.sl/store/segments/v1/idmap2/: meta  rlock
.sl/store/segments/v1/multimetalog/: log  meta  rlock
.sl/treestate/: 3f4dd481-4d6e-4ee8-a8c3-d4b6b60d20eb
backend/: .env.example  ARCHITECTURE.md  EMBEDDINGGEMMA_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  README_EMBEDDINGS.md  ROLE_WISE_RETRIEVAL_DEMO.md  SETUP.md  UPLOAD_GUIDE.md  check_pinecone_status.py  file_1.txt  list_all_vectors.py  nyaya_multi_agent.py  official_rag_pattern.py  resume_upload_from_checkpoint.py  setup_pinecone.sh  test_api.sh  test_inlegalbert_embeddings.ipynb  test_pinecone_embedding.py  upload_file_61_remaining.py  upload_legal_cases_to_pinecone.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  classification_agent.py  orchestrator.py  prediction_agent.py  rag_agent.py  similarity_agent.py
backend/app/api/: routes.py
backend/app/core/: __init__.py  config.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  classification_service.py  context_manager.py  embedding_service.py  intent_detection.py  pinecone_service.py  preprocessing.py
backend/docs/: PINECONE_SETUP.md
backend/embeddings_output/: full_document_embedding.npy  role_embeddings.pkl  sentence_embeddings.npy  sentence_metadata.pkl  sentences_with_roles.csv
client/: .env.example  README.md  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css
client/src/components/: AnalysisView.tsx  ChatInput.tsx  ChatMessage.tsx  DocumentUpload.tsx  LoadingIndicator.tsx  PredictionView.tsx  Sidebar.tsx  ThemeToggle.tsx  index.ts
client/src/contexts/: ThemeContext.tsx
client/src/data/: mockData.ts
client/src/services/: api.ts
client/src/types/: index.ts
docs/: ARCHITECTURE_INTEGRATION.md  CLUSTERING_VS_TRADITIONAL_RAG.md  CONFIDENCE_AND_CLUSTERING_GUIDE.md  DOCUMENT_QUERY_API.md  EMBEDDING_MODELS_EXPLAINED.md  EXAMPLE_FLOW_1.md  EXAMPLE_FLOW_2.md  HANDLING_CLASS_IMBALANCE.md  INTEGRATION_GUIDE.md  KAGGLE_MEMORY_OPTIMIZATION.md  MODEL_USAGE_QUICK_REFERENCE.md  NOTEBOOKS_EXPLAINED.md  PREPROCESSING_TEST_VAL_DATA.md  REMOTE_GPU_TRAINING_GUIDE.md  TRAINING_QUICK_CHECKLIST.md  TWO_MODEL_ARCHITECTURE_VISUAL.md
server/: .env  Intelligent_Legal_RAG.ipynb  Intelligent_Legal_RAG_Complete.ipynb  README.md  compare_approaches.py  main.py  populate_pinecone.py  pyproject.toml  remote_training_helper.sh  requirements.txt  test_trained_model.py  train_model.py  train_role_classifier.ipynb
server/embeddings/: embedding.ipynb  legaldocsembedding.ipynb  optimized_embedding_pipeline.ipynb
server/src/api/: __init__.py  auth.py  classification.py  conversations.py  document_query.py  documents.py  health.py  predictions.py  queries.py  system.py
server/src/config/: pinecone_setup.py  vector_db_config.py
server/src/core/: agent_orchestrator.py  clustering_rag.py  conversation_manager.py  document_processor.py  legal_rag.py  prediction_module.py
server/src/models/: clustering_role_classifier.py  role_classifier.py
server/src/models/trained_models/inlegalbert_20251007_041744/tensorboard_logs/: events.out.tfevents.1759810670.6fb9f576d1d8.27807.0
server/src/models/training/: README.md  data_loader.py  dataset_preprocessor.py  evaluate.py  train.py
