[project]
name = "nyaya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[all]>=0.119.0",
    "google-cloud-aiplatform>=1.121.0",
    "langchain>=1.0.1",
    "langchain-google-vertexai>=3.0.0",
    "langchain-pinecone>=0.0.1",
    "langgraph>=1.0.1",
    "pinecone>=7.3.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.1",
    "uvicorn>=0.38.0",
]
