[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.20",
    "langchain>=0.3.27",
    "langchain-community>=0.3.28",
    "langchain-google-vertexai>=2.0.28",
    "lxml>=6.0.1",
    "matplotlib>=3.10.5",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pypdf>=6.0.0",
    "tiktoken>=0.11.0",
    "unstructured[all-docs]>=0.18.14",
]
