[project]
name = "server"
version = "0.1.0"
description = "Legal Document Analysis Server with Role Classification and Multi-modal RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb==1.0.20",
    "langchain==0.3.27",
    "langchain-community==0.3.28",
    "langchain-google-vertexai==2.0.28",
    "lxml==6.0.1",
    "matplotlib==3.10.5",
    "pillow==11.3.0",
    "pydantic==2.11.7",
    "pypdf==6.0.0",
    "tiktoken==0.11.0",
    "unstructured[all-docs]==0.18.14",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "torch==2.8.0",
    "transformers==4.55.4",
    "numpy==2.3.2",
    "spacy==3.8.7",
    "scikit-learn==1.7.1",
    "pandas==2.3.2",
    "sentence-transformers==5.1.0",
    "faiss-cpu==1.12.0",
    "python-multipart==0.0.20",
    "accelerate==1.10.1",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.10.0",
    "attrs==25.3.0",
    "backoff==2.2.1",
    "bcrypt==4.3.0",
    "beautifulsoup4==4.13.5",
    "blis==1.3.0",
    "bottleneck==1.5.0",
    "build==1.3.0",
    "cachetools==5.5.2",
    "catalogue==2.0.10",
    "certifi==2025.8.3",
    "cffi==1.17.1 ; platform_python_implementation != 'PyPy'",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "cloudpathlib==0.21.1",
    "colorama==0.4.6 ; (os_name != 'nt' and sys_platform == 'win32') or (os_name == 'nt' and sys_platform != 'darwin' and sys_platform != 'linux')",
    "coloredlogs==15.0.1",
    "confection==0.1.5",
    "contourpy==1.3.3",
    "cryptography==45.0.6",
    "cycler==0.12.1",
    "cymem==2.0.11",
    "dataclasses-json==0.6.7",
    "deprecated==1.2.18",
    "distro==1.9.0",
    "docstring-parser==0.17.0",
    "durationpy==0.10",
    "effdet==0.4.1",
    "emoji==2.14.1",
    "et-xmlfile==2.0.0",
    "filelock==3.19.1",
    "filetype==1.2.0",
    "flatbuffers==25.2.10",
    "fonttools==4.59.1",
    "frozenlist==1.7.0",
    "fsspec==2025.7.0",
    "google-api-core==2.25.1",
    "google-auth==2.40.3",
    "google-cloud-aiplatform==1.110.0",
    "google-cloud-bigquery==3.36.0",
    "google-cloud-core==2.4.3",
    "google-cloud-resource-manager==1.14.2",
    "google-cloud-storage==2.19.0",
    "google-cloud-vision==3.10.2",
    "google-crc32c==1.7.1",
    "google-genai==1.31.0",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.2.4 ; (python_full_version < '3.14' and platform_machine == 'AMD64') or (python_full_version < '3.14' and platform_machine == 'WIN32') or (python_full_version < '3.14' and platform_machine == 'aarch64') or (python_full_version < '3.14' and platform_machine == 'amd64') or (python_full_version < '3.14' and platform_machine == 'ppc64le') or (python_full_version < '3.14' and platform_machine == 'win32') or (python_full_version < '3.14' and platform_machine == 'x86_64')",
    "grpc-google-iam-v1==0.14.2",
    "grpcio==1.74.0",
    "grpcio-status==1.74.0",
    "h11==0.16.0",
    "hf-xet==1.1.8 ; platform_machine == 'aarch64' or platform_machine == 'amd64' or platform_machine == 'arm64' or platform_machine == 'x86_64'",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "huggingface-hub==0.34.4",
    "humanfriendly==10.0",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.4.1",
    "kiwisolver==1.4.9",
    "kubernetes==33.1.0",
    "langchain-core==0.3.75",
    "langchain-text-splitters==0.3.9",
    "langcodes==3.5.0",
    "langdetect==1.0.9",
    "langsmith==0.4.18",
    "language-data==1.3.0",
    "marisa-trie==1.3.1",
    "markdown==3.8.2",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "mdurl==0.1.2",
    "ml-dtypes==0.5.3",
    "mmh3==5.2.0",
    "mpmath==1.3.0",
    "msoffcrypto-tool==5.4.2",
    "multidict==6.6.4",
    "murmurhash==1.0.13",
    "mypy-extensions==1.1.0",
    "networkx==3.5",
    "nltk==3.9.1",
    "numexpr==2.11.0",
    "nvidia-cublas-cu12==12.8.4.1 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-cupti-cu12==12.8.90 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-nvrtc-cu12==12.8.93 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12==12.8.90 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cudnn-cu12==9.10.2.21 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cufft-cu12==11.3.3.83 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cufile-cu12==1.13.1.3 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-curand-cu12==10.3.9.90 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusolver-cu12==11.7.3.90 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparse-cu12==12.5.8.93 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparselt-cu12==0.7.1 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nccl-cu12==2.27.3 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12==12.8.93 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvtx-cu12==12.8.90 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "oauthlib==3.3.1",
    "olefile==0.47",
    "omegaconf==2.3.0",
    "onnx==1.19.0",
    "onnxruntime==1.22.1",
    "opencv-python==4.11.0.86",
    "openpyxl==3.1.5",
    "opentelemetry-api==1.36.0",
    "opentelemetry-exporter-otlp-proto-common==1.36.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.36.0",
    "opentelemetry-proto==1.36.0",
    "opentelemetry-sdk==1.36.0",
    "opentelemetry-semantic-conventions==0.57b0",
    "orjson==3.11.3",
    "overrides==7.7.0",
    "packaging==25.0",
    "pdf2image==1.17.0",
    "pdfminer-six==20250506",
    "pi-heif==1.1.0",
    "pikepdf==9.10.2",
    "posthog==5.4.0",
    "preshed==3.0.10",
    "propcache==0.3.2",
    "proto-plus==1.26.1",
    "protobuf==6.32.0",
    "psutil==7.0.0",
    "pyarrow==19.0.1",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pybase64==1.4.2",
    "pycocotools==2.0.10",
    "pycparser==2.22 ; platform_python_implementation != 'PyPy'",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pygments==2.19.2",
    "pypandoc==1.15",
    "pyparsing==3.2.3",
    "pypdfium2==4.30.0",
    "pypika==0.48.9",
    "pyproject-hooks==1.2.0",
    "pyreadline3==3.5.4 ; sys_platform == 'win32'",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.1.1",
    "python-iso639==2025.2.18",
    "python-magic==0.4.27",
    "python-oxmsg==0.0.2",
    "python-pptx==1.0.2",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "rapidfuzz==3.13.0",
    "referencing==0.36.2",
    "regex==2025.7.34",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==14.1.0",
    "rpds-py==0.27.0",
    "rsa==4.9.1",
    "safetensors==0.6.2",
    "scipy==1.16.1",
    "setuptools==80.9.0",
    "shapely==2.1.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smart-open==7.3.0.post1",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "sqlalchemy==2.0.43",
    "srsly==2.5.1",
    "starlette==0.47.3",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "thinc==8.3.6",
    "threadpoolctl==3.6.0",
    "timm==1.0.19",
    "tokenizers==0.21.4",
    "torchvision==0.23.0",
    "tqdm==4.67.1",
    "triton==3.4.0 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "typer==0.16.1",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "unstructured-client==0.42.3",
    "unstructured-inference==1.0.5",
    "unstructured-pytesseract==0.3.15",
    "urllib3==2.5.0",
    "uvloop==0.21.0 ; platform_python_implementation != 'PyPy' and sys_platform != 'cygwin' and sys_platform != 'win32'",
    "validators==0.35.0",
    "wasabi==1.1.3",
    "watchfiles==1.1.0",
    "weasel==0.4.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "wrapt==1.17.3",
    "xlrd==2.0.2",
    "xlsxwriter==3.2.5",
    "yarl==1.20.1",
    "zipp==3.23.0",
    "zstandard==0.24.0",
    "fitz>=0.0.1.dev2",
    "langchain-chroma>=0.2.5",
    "seaborn>=0.13.2",
]
